feat: start admin accounting page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2387,6 +2387,7 @@
       "complaints": "Complaints",
       "reviews": "Reviews",
       "invoice": "Invoices and contracts",
+      "accounting": "Accounting",
       "organization": "Organization"
     },
 
