--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2710,6 +2710,7 @@
       "complaints": "Жалобы",
       "reviews": "Отзывы",
       "invoice": "Счета и договора",
+      "accounting": "Бухгалтерия",
       "organization": "Организация"
     },
 
@@ -2718,6 +2719,7 @@
       "channels": "Каналы",
       "users": "Пользователи",
       "transactions": "Tранзакции",
+      "accounting": "Бухгалтерия",
       "moderation": "Модерация",
       "complaints": "Жалобы",
       "reviews": "Отзывы"
@@ -3068,6 +3070,66 @@
             "signed": "Подписан",
             "signed_party": "Ожидает вашей подписи",
             "signed_self": "Ожидает подписи партера"
+          }
+        }
+      },
+
+      "card": {
+        "contract": {
+          "label": "Номер и дата договора"
+        },
+        "updated": "Дата обновления",
+        "counterparty": {
+          "title": "Контрагент",
+          "inn": "ИНН"
+        },
+        "price": {
+          "title": "Стоимость",
+          "delivery": "Стоимость поставки",
+          "vat": "Сумма НДС",
+          "withVat": "Стоимость с НДС"
+        }
+      }
+    },
+
+    "accounting": {
+      "title": "Бухалтерия",
+      "description": "Список документов для бухгалтерии в системе Blogix.",
+
+      "tabs": {
+        "category": {
+          "title": "Направление",
+          "type": {
+            "top_up": "Пополнение средств",
+            "withdraw": "Вывод средств",
+            "refund": "Возврат средств"
+          }
+        },
+
+        "period": {
+          "title": "Период",
+          "type": {
+            "today": "Сегодня",
+            "week": "Эта неделя",
+            "month": "Этот месяц",
+            "all": "Все время"
+          }
+        },
+
+        "sorting": {
+          "title": "Сортиковка даты",
+          "type": {
+            "increase": "По возрастанию",
+            "decrease": "По убыванию"
+          }
+        },
+
+        "signature": {
+          "title": "Статус подписи",
+          "type": {
+            "pending": "В ожидании",
+            "rejected": "Отклонен",
+            "completed": "Подписан"
           }
         }
       },
