--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -2385,6 +2385,7 @@
       "complaints": "Shikoyatlar",
       "reviews": "Sharhlar",
       "invoice": "Hisob-fakturalar va shartnomalar",
+      "accounting": "Buxgalteriya",
       "organization": "Organizatsiya"
     },
 
