--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2432,6 +2432,13 @@
         }
       },
 
+      "accounting": {
+        "sign": {
+          "success": "Операция проведена",
+          "error": "Ошибка во время проведения операции"
+        }
+      },
+
       "review": {
         "accept": {
           "success": "Отзыв принят",
@@ -3135,6 +3142,25 @@
       },
 
       "card": {
+        "transaction_id": "ID транзакции",
+        "created_date": "Дата создания",
+        "user": "Контрагент",
+        "tin": "ИНН",
+        "pinfl": "ПИНФЛ",
+        "wallet_type": "Тип кошелька",
+        "transaction_type": "Тип транзакции",
+        "amount": "Cумма",
+
+        "wallet": {
+          "deposit": "Депозитный кошелек",
+          "profit": "Прибыльный кошелек"
+        },
+
+        "type": {
+          "top_up": "Пополнение",
+          "withdraw": "Вывод"
+        },
+
         "contract": {
           "label": "Номер и дата договора"
         },
@@ -3148,6 +3174,11 @@
           "delivery": "Стоимость поставки",
           "vat": "Сумма НДС",
           "withVat": "Стоимость с НДС"
+        },
+
+        "buttons": {
+          "sign": "Подписать",
+          "signed": "Подписан"
         }
       }
     }
