--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2507,9 +2507,14 @@
       }
     },
     "organization": {
+      "login": {
+        "success": "Вы успешно вошли в систему",
+        "error": "При входе в систему произошла ошибка"
+      },
       "create": {
         "success": "Организация успешно отправлена на модерацию",
-        "error": "При добавлении организации произошла ошибка"
+        "error": "При добавлении организации произошла ошибка",
+        "unique": "Данная организация уже зарегистрирована в системе"
       },
       "offer_sign": {
         "success": "Публичная оферта успешно подписана",
