--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2820,6 +2820,25 @@
               "required": "неверный формат, введите по формату дд.мм.гггг: 22.09.2023"
             }
           }
+        },
+
+        "reject": {
+          "title": "Отконенин канала",
+          "reason": {
+            "title": "Причина отклонения",
+            "default_value": "Напишите причину ...",
+            "error": {
+              "required": "поле не может быть пустым"
+            }
+          },
+          "date": {
+            "title": "Дата окончания отклонения",
+            "default_value": "22.09.2023",
+            "description": "Введите дату окончания отклонения в формате ДД.ММ.ГГГГ.",
+            "error": {
+              "required": "неверный формат, введите по формату дд.мм.гггг: 22.09.2023"
+            }
+          }
         }
       }
     },
