--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2061,8 +2061,8 @@
     "choose_date": "Выберите дату",
     "choose_time": "Выберите время",
     "confirm": "Потдвердить",
-    "range": "Выбрать диапазон",
-    "date": "Выбрать дату",
+    "range": "Выбрать несколько",
+    "date": "Выбрать одно",
     "until": "до"
   },
 
