--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1745,8 +1745,8 @@
     "choose_date": "Sanani tanlang",
     "choose_time": "Vaqtni tanlang",
     "confirm": "Tasdiqlash",
-    "range": "Oraliqni tanlash",
-    "date": "Sanani tanlash",
+    "range": "Bir nechta tanlash",
+    "date": "Bitta tanlash",
     "until": "gacha"
   },
 
