--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2388,7 +2388,9 @@
         "views": "Просмотры",
         "description": "Идеальный канал: низкий CPV + высокий ER"
       }
-    }
+    },
+    "show_all": "Показать все",
+    "hide": "Скрыть"
   },
 
   "add_platform_btn": {
