--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1766,7 +1766,8 @@
       "channels": "Каналов",
       "views": "Охват",
       "cost": "Сумма",
-      "cart": "Перейти в корзину"
+      "cart": "Перейти в корзину",
+      "information": "Сумма будет рассчитана после создания постов и дат размещения"
     }
   },
 
