--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1732,7 +1732,7 @@
           "max_length": "Maksimal 10 ta mediafayl",
           "formats": {
             "title": "Qo'llab-quvvatlanadigan formatlar:",
-            "text": "JPG/JPEG, PNG, MP4, MOV, AVI, WMV, WEBM"
+            "text": "JPG/JPEG, PNG, MP4, MOV, AVI, WMV, WEBM, GIF"
           },
           "size": {
             "title": "Maksimal hajm:",
@@ -1889,7 +1889,7 @@
           "button": "Faylni tanlash",
           "formats": {
             "title": "Qo'llab-quvvatlanadigan formatlar:",
-            "text": "JPG/JPEG, PNG, MP4, MOV, AVI, WMV, WEBM"
+            "text": "JPG/JPEG, PNG, MP4, MOV, AVI, WMV, WEBM, GIF"
           },
           "size": {
             "title": "Maksimal hajm:",
