feat: post editor and post display

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1683,6 +1683,7 @@
       "choose_platform": "Choose a Platform",
       "your_posts": "Your Posts",
       "add_file": "Upload File",
+      "start_typing": "Start typing...",
       "comment": "Comment for the Blogger...",
       "result": "Result",
       "post": "Start filling out the advertising post to see the result",
