--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1990,6 +1990,7 @@
       "choose_platform": "Выберите платформу",
       "your_posts": "Ваши посты",
       "add_file": "Загрузить файл",
+      "start_typing": "Начните печатать...",
       "comment": "Комментарий блогеру...",
       "result": "Результат",
       "post": "Начните заполнять рекламный пост чтобы увидеть результат",
