--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1681,6 +1681,7 @@
       "choose_platform": "Platformani tanlang",
       "your_posts": "Sizning postlaringiz",
       "add_file": "Fayl yuklash",
+      "start_typing": "Matn kiritishni boshlang...",
       "comment": "Bloger uchun izoh...",
       "result": "Natija",
       "post": "Natijani ko'rish uchun reklama postini to'ldirishni boshlang",
