--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -615,7 +615,8 @@
         "active": "В работе",
         "develop": "В разработке",
         "agreed": "На согласовании",
-        "completed": "Завершено"
+        "completed": "Завершено",
+        "saved": "Сохранено"
       },
       "channels": "Каналы",
       "views": "Просмотры",
@@ -2090,12 +2091,14 @@
 
     "payment": {
       "title": "Оплата проекта",
-      "pay": "Оплатить",
+      "pay": "Оплатить и запустить",
       "approve": "На согласование",
       "price": "Итоговая сумма:",
       "choose_wallet": "Выберите кошелек для оплаты проекта",
       "description": "Остался последний шаг для запуска эффективной рекламной кампании! Как только вы оплатите заказ, владельцы площадок моментально получат уведомления и начнут размещение вашей рекламы"
     },
+
+    "save": "Сохранить проект",
 
     "loading": {
       "posts": "Отправляем рекламные посты...",
@@ -2812,6 +2815,10 @@
         "success": "Рекламная кампания успешно оплачена и запущена!",
         "not_enough_balance": "У вас недостаточно средств на данном кошельке, нужно пополнить баланс",
         "error": "Во время запуска рекламной кампании произошла ошибка"
+      },
+      "save": {
+        "success": "Проект успешно сохранен",
+        "error": "Во время сохранения проекта произошла ошибка"
       },
       "date": {
         "error": "Ошибка в создании дат для каналов",
